# apl

./: .apl.history  CMakeLists.txt  Makefile  config.h  config.status  libtool
src/: CMakeLists.txt  Makefile  Quad_SQL.cc  buildtag.hh  configure_args.cc  makefile.h
src/.deps/: AP100-Backtrace.Po  AP100-Svar_DB.Po  AP100-Svar_record.Po  AP210-Backtrace.Po  AP210-Svar_DB.Po  AP210-Svar_record.Po  APserver-Svar_record.Po  apl-Archive.Po  apl-Assert.Po  apl-Avec.Po  apl-Backtrace.Po  apl-Bif_F12_FORMAT.Po  apl-Bif_F12_SORT.Po  apl-Bif_F12_TAKE_DROP.Po  apl-Bif_OPER1_COMMUTE.Po  apl-Bif_OPER1_EACH.Po  apl-Bif_OPER1_REDUCE.Po  apl-Bif_OPER1_SCAN.Po  apl-Bif_OPER2_INNER.Po  apl-Bif_OPER2_OUTER.Po  apl-Bif_OPER2_POWER.Po  apl-Bif_OPER2_RANK.Po  apl-CDR.Po  apl-Cell.Po  apl-CharCell.Po  apl-Command.Po  apl-Common.Po  apl-ComplexCell.Po  apl-DerivedFunction.Po  apl-DiffOut.Po  apl-Doxy.Po  apl-DynamicObject.Po  apl-Error.Po  apl-Executable.Po  apl-FloatCell.Po  apl-Function.Po  apl-IO_Files.Po  apl-Id.Po  apl-IndexExpr.Po  apl-IndexIterator.Po  (+62 more)
src/APs/: Makefile
src/APs/.deps/: AP100-AP100.Po  AP100-APmain.Po  AP210-AP210.Po  AP210-APmain.Po  APserver-APserver.Po  APserver-Svar_DB_server.Po
src/Gtk/: Makefile
src/emacs_mode/: Makefile
src/emacs_mode/.deps/: DefCommand.Plo  FnCommand.Plo  FnTagCommand.Plo  FollowCommand.Plo  GetVarCommand.Plo  HelpCommand.Plo  Listener.Plo  NetworkConnection.Plo  RunCommand.Plo  SendCommand.Plo  SiCommand.Plo  TraceData.Plo  (+10 more)
src/native/: Makefile
src/sql/: Makefile  apl-sqlite.hh
src/testcases/: Makefile
src/workspaces/: Makefile
(+40 files in other folders)
